; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_is_seafile_backup_file.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_is_seafile_backup_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"*.sbak\00", align 1
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @is_seafile_backup_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_seafile_backup_file(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = call i32* @g_pattern_spec_new(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32* %5, i32** %3, align 8
  %6 = load i32, i32* @FALSE, align 4
  store i32 %6, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = call i64 @g_pattern_match_string(i32* %7, i8* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @TRUE, align 4
  store i32 %12, i32* %4, align 4
  br label %13

13:                                               ; preds = %11, %1
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @g_pattern_spec_free(i32* %14)
  %16 = load i32, i32* %4, align 4
  ret i32 %16
}

declare dso_local i32* @g_pattern_spec_new(i8*) #1

declare dso_local i64 @g_pattern_match_string(i32*, i8*) #1

declare dso_local i32 @g_pattern_spec_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
